Removed need for langforge-app project to use Java modules. Updated start scripts to handle module paths and added modules.